Fixing image not visible on pages

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    background: url('/assets/images/background/bgImage.jpg') no-repeat center center fixed;
+    background: url('assets/images/background/bgImage.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
